html va sassga kodlar yozildi

--- a/index.html
+++ b/index.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Card-2</title>
-</head>
-<body>
-  <div class="container">
-    <div class="main">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Card-2</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="./bootstrap-5.0.2-dist/css/bootstrap.min.css"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <div class="container-fluid mb-5">
+        <div class="row align-items-center">
+          <div class="col-lg-6 px-0">
+            <img class="img-fluid" src="./img/img-1.svg" alt="Image" />
+          </div>
+          <div class="col-lg-6 py-5 py-lg-0 px-3 px-lg-5">
+            <p c>Quick and easy</p>
+            <p>Fast forward process</p>
 
+            <p>
+              Ut vitae nisi eu nisi maximus condimentum ac id purus. Duis sit
+              amet mi arcu praesent nec felis nisl.
+            </p>
+            <p>
+              Qabul kunlari: Dushanba-Shanba
+            </p>
+            <p>
+              E-mail: sa'dullayevalisher@gmail.com
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
