--- a/index.html
+++ b/index.html
@@ -18,19 +18,42 @@
             <img class="img-fluid" src="./img/img-1.svg" alt="Image" />
           </div>
           <div class="col-lg-6 py-5 py-lg-0 px-3 px-lg-5">
-            <p c>Quick and easy</p>
-            <p>Fast forward process</p>
+            <p class="main-text-1">Quick and easy</p>
+            <p class="main-text-2">Fast forward process</p>
 
-            <p>
+            <p class="main-text-3">
               Ut vitae nisi eu nisi maximus condimentum ac id purus. Duis sit
               amet mi arcu praesent nec felis nisl.
             </p>
-            <p>
-              Qabul kunlari: Dushanba-Shanba
-            </p>
-            <p>
-              E-mail: sa'dullayevalisher@gmail.com
-            </p>
+            <div class="footer">
+              <img class="footer-icon" src="./img/icon-1.svg" alt="" />
+
+              <img
+                class="footer-icon footer-bg"
+                src="./img/icon-2.svg"
+                alt=""
+              />
+            </div>
+            <div class="footer-main">
+              <p class="text-footer">Affordable prices</p>
+              
+              <p class="text-footer">Less paper work</p>
+             
+            </div>
+            <div class="main-footer-cont">
+              <p class="cont-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Suspendisse varius enim in eros.
+              </p>
+              <p class="cont-text-2">
+                Curabitur porta luctus semper donec eget lobortis leo ac finibus
+                nisi.
+              </p>
+            </div>
+            <div class="button">
+              <button type="button" class="btn btn-outline-secondary">Explore properties</button>
+              <a class="button-link" href="#"><img src="./img/link-button.svg" alt=""></a>
+            </div>
           </div>
         </div>
       </div>
